# brad

./: .clang-format  .envrc  .gdb_history  .gitattributes  .gitignore  1  Cargo.toml  Makefile  README.md  compile_commands.json  drad.ebnf  drad.lex  drad.md  out  out.lua  perf.data  shell.nix  solve.bd  solve.bdt  specification.md  test.asm  test.brad
.github/workflows/: ci.yml
bench/: .gitignore  README.md  benchmark.py  binarytrees.bd  fasta.bd  knucleotide.bd  lru.bd  merkletrees.bd  nbody.bd  nsieve.bd  pidigits.bd  secp256k1.bd
bench/plg/: coro-prime-sieve.bd  edigits.bd  fannkuch-redux.bd  fasta.bd  helloworld.bd  json-serde.bd  knucleotide.bd  lru.bd  nbody.bd  nsieve.bd  spectral-norm.bd
bench/simple/: add.bd  add2.bd  match.bd  native.bd  pow.bd
brad/: main.bd
brad/parse/: token.bd
diagnostic/: Cargo.toml
diagnostic/src/: lib.rs  source.rs  span.rs
docs/: abi.md  async.md  project_plan.md  specification.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ast_formatter.rs
lib/brad/: main.bd
lib/std/: main.bd
rt/c/: allocator.c  allocator.h  arena.c  arena.h  async.c  async.h  async_ds.c  async_future.c  async_future.h  async_loop.h  async_loop_iouring.c  async_op.h  async_scheduler.c  async_scheduler.h  async_sync_interopt.c  async_sync_interopt.h  async_task.h  bae_future.c  bae_future.h  bae_loop.h  bae_loop_iouring.c  bae_op.h  bae_scheduler.h  bae_scheduler_simple.c  bae_task.c  (+11 more)
runtime/: gc.c  gc.h  std_io.c  std_io.h  std_list.c  std_list.h  std_os.c  std_string.c  std_string.h  types.h
solve/: Cargo.toml
src/: attribute.rs  cli.rs  compiler.rs  interpret.rs  main.rs
std/: main.bd
test/: main.bd
tests/: README.md  array_test.bd  curry.bd  fib.bd  file_io.bd  list.bd  list_test.bd  mutate.bd  print.bd  record.bd  recurse.bd
tools/: brad_async_example.c  build-test.sh  compile-brad-debug.sh  run-brad-tests.sh
tree-sitter-brad/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.bd  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.bd  tree-sitter.json
tree-sitter-brad/bindings/c/: tree-sitter-brad.pc.in
tree-sitter-brad/bindings/go/: binding.go  binding_test.go
tree-sitter-brad/bindings/node/: binding.cc  index.js
tree-sitter-brad/bindings/python/tests/: test_binding.py
tree-sitter-brad/bindings/python/tree_sitter_brad/: __init__.py  binding.c
tree-sitter-brad/bindings/rust/: build.rs  lib.rs
tree-sitter-brad/bindings/swift/TreeSitterbrad/: brad.h
tree-sitter-brad/bindings/swift/TreeSitterbradTests/: TreeSitterbradTests.swift
tree-sitter-brad/src/: grammar.json  node-types.json  parser.c
(+180 files in other folders)
