[package]
name = "brad"
version = "0.1.0"
edition = "2021"

[lib]
name = "brad"
path = "src/main.rs"
crate-type = ["rlib"]

[[bin]]
name = "brad"
path = "src/main.rs"

[dependencies]
colored = "3.0"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
arbitrary = "1.4.1"
llvm-sys-191 = { package = "llvm-sys", version = "191.0.0" }

[workspace]
members = ["fuzz"]