[package]
name = "brad"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["diagnostic", "solve"]

[workspace.dependencies]
diagnostic = { package = "brad-diagnostic", path = "diagnostic" }
solve      = { package = "brad-solve",      path = "solve"      }

[features]
default = ["llvm-sys-191"]

[dependencies]
colored = "3.0"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
seahash = "4.1.0"

diagnostic = { workspace = true }
solve      = { workspace = true }

[dependencies.llvm-sys-191]
package = "llvm-sys"
version = "191.0.0"
optional = true


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
panic = "abort"
